# complex-plot

./: CMakeLists.txt  README.md  complex-plot.pro
res/: resources.qrc
src/: coloring.cpp  coloring.h  function.cpp  function.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotdata.h  plotwidget.cpp  plotwidget.h  version.h  version.hpp
src/engine/: Parser.hpp  Polynomial.hpp  Visitor.hpp  coloring.cpp  coloring.hpp  engine.hpp  function.cpp  function.hpp  plotdata.hpp
src/ui/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui  plotwidget.cpp  plotwidget.hpp
